--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <section id="sidebyside" class="sidebyside">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Trusted home builders for (main city) for over 20 years</h2>
+                    <h2 class="title">Trusted home builders</h2>
                      <p>
                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam debitis dolor consectetur dolorem inventore modi tenetur ex odit, amet beatae ad, doloribus tempora quae ab nulla minus temporibus at veritatis!
                      </p>
@@ -212,7 +212,7 @@
         <section id="sidebyside-reverse">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Extra content, maybe talk about a main service</h2>
+                    <h2 class="title">Talk about a main service</h2>
                      <p>
                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam debitis dolor consectetur dolorem inventore modi tenetur ex odit, amet beatae ad, doloribus tempora quae ab nulla minus temporibus at veritatis!
                      </p>
